MOVE-4706 encryption decryption (#1401)
* MOVE-4706 ny ecryptedBusiness message plus crypto persister plus encryption code

* MOVE-4706 revert ObjectMapper to jpa package

* MOVE-4706 Encrypted business message

* MOVE-4805 encrypted business message + crypto store

* noe mer patcher for merge konflikter

* MOVE-4813 signering

* MOVE-4834 kryptering av apprec

Co-authored-by: Håvard England <hme@digdir.no>

* MOVE-4834 binding av konfigurasjonsproperties

* MOVE-4834 signering av apprec

* MOVE-4866 ta i bruk shared model fra nhn

* MOVE-4425 deserializering av Apprec fra Java siden

* MOVE-4896 MOVE-4866 incoming message + business document service

* MOVE-4896 get business message

Co-authored-by: Håvard England <hme@digdir.no>

* MOVE-4425 mark as read + getmessage

Co-authored-by: Håvard England <hme@digdir.no>

* MOVE-4425 fjern onbehalfOf + sikkerhetsjekk

Co-authored-by: Håvard England <hme@digdir.no>

* fMOVE-4425 fix unit test

* MOVE-4934 Få med feilmelding fra nhn-adapter i feilhåndteringen

* nhn-adapter manual releases on GitHub

* MOVE-4955 Tilpasse sending til fastlege via NHN til eksisterande meldingstype-mønster i Integrasjonspunktet

* MOVE-4955 Tilpasse sending til fastlege via NHN til eksisterande meldingstype-mønster i Integrasjonspunktet

* MOVE-4955 Tilpasse sending til fastlege via NHN til eksisterande meldingstype-mønster i Integrasjonspunktet

* MOVE-4955 Tilpasse sending til fastlege via NHN til eksisterande meldingstype-mønster i Integrasjonspunktet

* MOVE-4955 Tilpasse sending til fastlege via NHN til eksisterande meldingstype-mønster i Integrasjonspunktet

* MOVE-4955 Tilpasse sending til fastlege via NHN til eksisterande meldingstype-mønster i Integrasjonspunktet

* MOVE-4955 Tilpasse sending til fastlege via NHN til eksisterande meldingstype-mønster i Integrasjonspunktet

* MOVE-4955 Tilpasse sending til fastlege via NHN til eksisterande meldingstype-mønster i Integrasjonspunktet

* MOVE-4955 Bruke SBD i stedet for properitære DTOer